Tests/Should_fail/3_Operations/09_MulNonEntiere3.decaf
class Test {
	void main(){
		int a;
        boolean b;
		a = b * 5;
	}
}